# IPC_chaining

./: CMakeLists.txt  config.h  start.sh  sync.sh
receiver/: CMakeLists.txt  receiver.cpp
sender/: CMakeLists.txt  sender.cpp
